Fix locales problem with lualatex.

--- a/kczulko_cv.tex
+++ b/kczulko_cv.tex
@@ -14,7 +14,7 @@
 \lastname{Verne}
 \quote{\itshape ``En France, on exhibe des farceurs \'{e}trangers, et \`{a} l'\'{e}tranger, des farceurs fran\c cais~!''}
 
-\cvpicture{./samplepic.jpg}
+%\cvpicture{./samplepic.jpg}
 % Add up to 10 assets (0 to 9)
 \setcvasset[0]{More than \emph{50 novels} written}
 \setcvasset[1]{\emph{SciFi} pioneer}
