--- a/kczulko.tex
+++ b/kczulko.tex
@@ -52,70 +52,83 @@
       {since 07.2019\\Gdynia, Poland}
       {scala, cats, http4s,\\shapeless, tagless-final,
         \\bazel, nixos, kafka,\\elasticsearch, microservices}
-	  {Development of HDFS metadata indexing hub (proprietary solution akin to \href{https://egeria.odpi.org}{egeria}). We build microservice oriented system on the top of Elasticsearch. Our app allows datascientists to search for any data that exists within Nordea's datalake. Please find some of my achievements below:
-	    \begin{missions}
-		\item I've introduced (and teached) modern FP architecture across microservices
-		\item I've unified technology stack into more FP oriented one (better testability)
-	    \end{missions}
+      {Development of HDFS metadata indexing hub (proprietary solution akin to \href{https://egeria.odpi.org}{egeria}).
+        We build microservice oriented system on the top of Elasticsearch.
+        Our app allows datascientists to search for any data that exists within Nordea's datalake.
+        Please find some of my achievements below:
+        \begin{missions}
+        \item I've introduced (and teached) modern FP architecture across microservices
+        \item I've unified technology stack into more FP oriented one (better testability)
+        \end{missions}
       }
 %----------------------------------------------------------------------------
 \story{scala developer}
       {\href{https://www.intel.com/content/www/us/en/jobs/locations/poland.html}{Intel Technology Poland}}
       {07.2018 - 06.2019\\Gdańsk, Poland}
-	  {compilers, shapeless,\\scala-macros, fs2, zio,\\monocle, scalaz,\\antlr4, sbt}
-	  {I worked with presilicon group under Intel Network Division (before aquisition it was Fulcrum Microsystems from Caltech). Initially, I was hired to develop scala simulation model for next generation ethernet switch. Due to requirements change within our organisation, this activity was abandoned. Since our group lacked good, modern compiler support for presilicon memory design activities, we decided to focus on \href{https://www.accellera.org/downloads/standards/systemrdl}{SystemRDL 1.0} (SRDL) compiler development. Here are some of my key achievements:
-	    \begin{missions}
+      {compilers, shapeless,\\scala-macros, fs2, zio,\\monocle, scalaz,\\antlr4, sbt}
+      {I worked with presilicon group under Intel Network Division (before aquisition it was Fulcrum Microsystems from Caltech).
+        Initially, I was hired to develop scala simulation model for next generation ethernet switch.
+        Due to requirements change within our organisation, this activity was abandoned.
+        Since our group lacked good, modern compiler support for presilicon memory design activities, we decided to focus on
+        \href{https://www.accellera.org/downloads/standards/systemrdl}{SystemRDL 1.0} (SRDL) compiler development. Here are some of my key achievements:
+        \begin{missions}
         \item I've developed probably first fully compliant, built-in SRDL1.0 preprocessor
         \item Redefined SRDL1.0 grammar (official one had bugs)
-   	    \item I made pure functional, next-gen intel's eth switch memory model
-	    \end{missions}
+        \item I made pure functional, next-gen intel's eth switch memory model
+        \end{missions}
       }
 %----------------------------------------------------------------------------
 \story{senior java developer}
       {\href{https://diversecg.pl/}{DCG} (under contract to Nordea Capital Markets)}
       %% {03.2018-06.2018\\Gdańsk, Poland}
       {March - June, 2018\\Gdańsk, Poland}
-	  {java, spark, docker\\java-testcontainers}
-	  {I've joined a team responsible for Market Liquidity Credit Risk (MLQR) app development. MLQR was internal, proprietary application responsible for calulating daily - executed as batch job - credit risk coefficient. Please find below some of my achievements:
-	    \begin{missions}
-		\item Developed local spark deployment of ETL job for test configuration
+      {java, spark, docker\\java-testcontainers}
+      {I've joined a team responsible for Market Liquidity Credit Risk (MLQR) app development.
+        MLQR was internal, proprietary application responsible for calulating daily - executed as batch job - credit risk coefficient.
+        Please find below some of my achievements:
+        \begin{missions}
+        \item Developed local spark deployment of ETL job for test configuration
         \item Code reviews \& bug fixing
-	    \end{missions}
+        \end{missions}
       }
 %----------------------------------------------------------------------------
 \story{scala developer}{\href{https://www.scalac.io}{Scalac}}
       {2017 - 2018\\Gdańsk, Poland}
-	  {scala, akka-streams,\\graphql, cassandra,\\kafka, play, mtl}
-	  {During almost all of my time spend at Scalac, I worked for Qvantel - a Finnish business solution systems provider for telco companies. As a Scalac we developed for Qvantel several microservices, mostly responsible for ETL jobs (messages transformation and ingesting). Our scallable apps were deployed on emerging markets like Bolivia, Equadoror Honduras. For one of them we satisfied client's constraint to process \approx12k messages per second. More about this cooperation can be found \href{http://media.licdn.com/embeds/media.html?src=https\%3A\%2F\%2Fissuu.com\%2Foutlookpublishing\%2Fdocs\%2Fqvantel\&amp;url=https\%3A\%2F\%2Fissuu.com\%2Foutlookpublishing\%2Fdocs\%2Fqvantel\&amp;type=text\%2Fhtml\&amp;schema=issuu}{<<here>>}.
+      {scala, akka-streams,\\graphql, cassandra,\\kafka, play, mtl}
+      {During almost all of my time spend at Scalac, I worked for Qvantel - a Finnish business solution systems provider for telco companies.
+        As a Scalac we developed for Qvantel several microservices, mostly responsible for ETL jobs (messages transformation and ingesting).
+        Our scallable apps were deployed on emerging markets like Bolivia, Equador or Honduras. For one of them we satisfied client's constraint
+        to process \approx12k messages per second. More about this cooperation can be found
+        \href{http://media.licdn.com/embeds/media.html?src=https\%3A\%2F\%2Fissuu.com\%2Foutlookpublishing\%2Fdocs\%2Fqvantel\&amp;url=https\%3A\%2F\%2Fissuu.com\%2Foutlookpublishing\%2Fdocs\%2Fqvantel\&amp;type=text\%2Fhtml\&amp;schema=issuu}{<<here>>}.
       }
 %----------------------------------------------------------------------------
 \story{software engineer}
       {\href{https://www.intel.com/content/www/us/en/jobs/locations/poland.html}
         {Intel Technology Poland}}
       {2014 - 2017\\Gdańsk, Poland}
-	  {javaee, c\#, c++11,\\gradle, docker,\\nodejs, bash}
-	  {Some description}
+      {javaee, c\#, c++11,\\gradle, docker,\\nodejs, bash}
+      {Some description}
 %----------------------------------------------------------------------------
 \story{software engineer}{\href{https://www.finastra.com/}{Misys}}
       {2012 - 2014\\Gdynia, Poland}
-	  {c++, c, bash}
-	  {Some description}
+      {c++, c, bash}
+      {Some description}
 %----------------------------------------------------------------------------
 \story{software engineer}
       {\href{https://sii.pl/en/}{SII} (under contract to Intel Technology Poland)}
       {2011 - 2012\\Gdańsk, Poland}
-	  {c\#, tcl,\\python, bash}
-	  {Some description}
+      {c\#, tcl,\\python, bash}
+      {Some description}
 %----------------------------------------------------------------------------
 \story{software engineer}{\href{https://micromade.pl}{Micromade}}
       {2010 - 2011\\Gdańsk, Poland}
-	  {c++, c, vcl}
-	  {Some description}
+      {c++, c, vcl}
+      {Some description}
 %----------------------------------------------------------------------------
 \story{internship}{\href{https://voicelab.ai}{Voicelab}}
       {2009 - 2010\\Gdańsk, Poland}
-	  {matlab, c, php}
-	  {Some description}
+      {matlab, c, php}
+      {Some description}
 %----------------------------------------------------------------------------
 \section{Education}
 \story{M.Sc., engineer}{Gdańsk University of Technology}{2006 - 2011\\Gdańsk, Poland}
