Update cv content.

--- a/src/kczulko-cv.tex
+++ b/src/kczulko-cv.tex
@@ -19,7 +19,7 @@
 \firstname{Karol}
 \lastname{Czułkowski}
 \title{scala developer}
-\quote{\itshape Self employed scala developer with 10 years of experience}
+\quote{\itshape Self employed scala developer with 10 years of overall experience}
 
 %\cvpicture{./samplepic.jpg}
 % Add up to 10 assets (0 to 9)
@@ -67,14 +67,14 @@
       {07.2018 - 06.2019\\Gdańsk, Poland}
       {compilers, shapeless,\\scala-macros, fs2, zio,\\monocle, scalaz,\\antlr4, sbt}
       {I worked with presilicon group under Intel Network Division (before aquisition it was Fulcrum Microsystems from Caltech).
-        Initially, I was hired to develop scala simulation model for next generation ethernet switch.
+        Essentially, I was hired to develop scala simulation model for next generation ethernet switch.
         Due to requirements change within our organisation, this activity was abandoned.
         Since our group lacked good, modern compiler support for presilicon memory design activities, we decided to focus on
         \href{https://www.accellera.org/downloads/standards/systemrdl}{SystemRDL 1.0} (SRDL) compiler development. Here are some of my key achievements:
         \begin{missions}
         \item I've developed probably first fully compliant, built-in SRDL1.0 preprocessor
         \item Redefined SRDL1.0 grammar (official one had bugs)
-        \item I made pure functional, next-gen intel's eth switch memory model
+        \item I made pure functional, next-gen Intel's eth switch memory model
         \end{missions}
       }
 %----------------------------------------------------------------------------
@@ -99,20 +99,26 @@
         As a Scalac we developed for Qvantel several microservices, mostly responsible for ETL jobs (messages transformation and ingesting).
         Our scallable apps were deployed on emerging markets like Bolivia, Equador or Honduras. For one of them we satisfied client's constraint
         to process \approx12k messages per second. More about this cooperation can be found
-        \href{http://media.licdn.com/embeds/media.html?src=https\%3A\%2F\%2Fissuu.com\%2Foutlookpublishing\%2Fdocs\%2Fqvantel\&amp;url=https\%3A\%2F\%2Fissuu.com\%2Foutlookpublishing\%2Fdocs\%2Fqvantel\&amp;type=text\%2Fhtml\&amp;schema=issuu}{<<here>>}.
+        \href{http://media.licdn.com/embeds/media.html?src=https\%3A\%2F\%2Fissuu.com\%2Foutlookpublishing\%2Fdocs\%2Fqvantel\&amp;url=https\%3A\%2F\%2Fissuu.com\%2Foutlookpublishing\%2Fdocs\%2Fqvantel\&amp;type=text\%2Fhtml\&amp;schema=issuu}{>>here<<}.
       }
 %----------------------------------------------------------------------------
 \story{software engineer}
       {\href{https://www.intel.com/content/www/us/en/jobs/locations/poland.html}
         {Intel Technology Poland}}
       {2014 - 2017\\Gdańsk, Poland}
-      {javaee, c\#, c++11,\\gradle, docker,\\nodejs, bash}
-      {Some description}
+      {java ee, c\#, c++11,\\gradle, docker,\\nodejs, bash}
+      {Initially I was hired as experienced validation engineer for newly formed
+        \href{https://www.intel.com/content/www/us/en/architecture-and-technology/rack-scale-design-overview.html}{Rackscale Design (RSD)} team.
+        My role was to develop high quality testing libraries and provide mentorship for other team members. After some time I've joined a development team of
+        \href{https://www.intel.com/content/www/us/en/architecture-and-technology/rack-scale-design/pod-manager-user-guide-v2-1.html}{POD Manager} component,
+        where I spend most of my time at Intel. I've been developing there a RESTful web service, responsible for assembly and system composition of Intel's RSD. 
+        Some of my work can still be found here: \emph{\href{https://github.com/intel/intelRSD}{https://github.com/intel/intelRSD}}
+        }
 %----------------------------------------------------------------------------
 \story{software engineer}{\href{https://www.finastra.com/}{Misys}}
       {2012 - 2014\\Gdynia, Poland}
-      {c++, c, bash}
-      {Some description}
+      {c++, c, java,\\groovy bash}
+      {I've joined Misys to support Kondor+ product development. }
 %----------------------------------------------------------------------------
 \story{software engineer}
       {\href{https://sii.pl/en/}{SII} (under contract to Intel Technology Poland)}
