Description and skills.

--- a/src/kczulko-cv.tex
+++ b/src/kczulko-cv.tex
@@ -25,8 +25,8 @@
 % Add up to 10 assets (0 to 9)
 \setcvasset[0]{\emph{Experienced} software developer}
 \setcvasset[1]{\emph{Functional} Programming}
-\setcvasset[2]{Designed \emph{Space travels}}
-\setcvasset[3]{\emph{TOP5} most-translated author}
+\setcvasset[2]{\emph{Knowledge} sharing}
+\setcvasset[3]{\emph{Team} player}
 \setcvcontact[email]{karol.czulkowski@gmail.com}
 \setcvcontact[cellphone]{\getenv{CELLPHONE}}
 \setcvcontact[linkedin]{karol-czulkowski}
@@ -50,17 +50,18 @@
 \story{scala developer}
       {\href{https://www.jit.team}{Jit Team} (under contract to Nordea Poland)}
       {since 07.2019\\Gdynia, Poland}
-      {scala, cats, http4s,\\shapeless, tagless-final,
-        \\bazel, nix, kafka,\\elasticsearch, microservices}
+      {scala, cats, http4s,\\shapeless, tagless-final,\\bazel, nix, kafka,\\elasticsearch,\\microservices
+      }
       {Development of HDFS metadata indexing hub (proprietary solution akin to \href{https://egeria.odpi.org}{egeria}).
-        It was microservice-oriented system build on the top of Elasticsearch.
-        Our app allows datascientists to search for any data that exists within Nordea's datalake.
+        Product is based on service oriented architecture build on the top of
+        Elasticsearch and allows datascientists to search for any data that exists
+        within Nordea's datalake.
         Please find some of my achievements below:
         \begin{missions}
         \item I've introduced (and teached internal workers) modern FP architecture across microservices
         \item I've unified technology stack into more FP oriented one (better testability)
         \item Implemented and refactored most of microservices
-        \item Planned and designed several feautures
+        \item Planned, designed and delivered several feautures
         \end{missions}
       }
 %----------------------------------------------------------------------------
@@ -87,7 +88,7 @@
       {java, spark, docker\\java-testcontainers}
       {I've joined a team responsible for Market Liquidity Credit Risk (MLQR) app development.
         MLQR was internal, proprietary application responsible for calulating daily - executed as batch job - credit risk coefficient.
-        Please find below some of my achievements:
+        Please find below some of my duties \& achievements:
         \begin{missions}
         \item Developed local spark deployment of ETL job for test configuration
         \item Code reviews \& bug fixing
@@ -109,19 +110,26 @@
         {Intel Technology Poland}}
       {2014 - 2017\\Gdańsk, Poland}
       {java ee, c\#, c++11,\\gradle, docker,\\nodejs, bash}
-      {Initially I was hired as experienced validation engineer for newly formed
-        \href{https://www.intel.com/intelRSD}{Rackscale Design (RSD)} team. My role was to develop high quality testing libraries and provide mentorship for
-        other team members. After some time I've joined a development team of
+      {Initially I was hired as experienced validation engineer for newly formed \href{https://www.intel.com/intelRSD}{Rackscale Design (RSD)} team.
+        My role was to develop high quality testing libraries and provide mentorship for other team members.
+        After some time I've joined development teams. Firstly it wrote some firmware code, especially to model LVM system.
+        Later I joined development team of
         \href{https://www.intel.com/content/www/us/en/architecture-and-technology/rack-scale-design/pod-manager-user-guide-v2-1.html}{POD Manager} component,
-        where I spend most of my time at Intel. I've been developing there a RESTful web service, responsible for assembly and system composition of Intel's RSD. 
+        where I spend most of my time at Intel. I've been developing there RESTful web service, responsible for assembly and system composition of Intel's RSD. 
         Some of my work can still be found here: \emph{\href{https://github.com/intel/intelRSD}{https://github.com/intel/intelRSD}}
-      }
+        Below are some of my key achievements:
+        \begin{missions}
+        \item Developed most of testing code \& libraries (around 50\% of commits were mine)
+        \item Implemented PODManager composition logic
+        \item Implemented network discovery through DHCP
+        \end{missions}
+      }      
 %----------------------------------------------------------------------------
 \story{software engineer}{\href{https://www.finastra.com/}{Misys}}
       {2012 - 2014\\Gdynia, Poland}
       {c++, c, java,\\groovy, bash}
       {I've joined Misys to support Kondor+ product development.
-        Apart from that I've done some work around other products related to Kondor+
+        Apart from that, I've done some work around other products related to Kondor+
         like MarkitWire adapter, which gave customers ability to use Kondor+ together
         with Markit stack.
       }
@@ -131,7 +139,7 @@
       {2011 - 2012\\Gdańsk, Poland}
       {c\#, tcl,\\python, bash}
       {I was hired to external team working for Intel Technology Poland. The team
-        took over responsibility for \href{https://en.wikipedia.org/wiki/Mdadm}{mdadm}
+        took over responsibility for \href{https://en.wikipedia.org/wiki/Mdadm}{\emph{mdadm}}
         validation, where Intel made support for their metadata. Later on I was
         responsible for Intel's `iscsi` driver validation. Please find below some
         of my key achievements:
@@ -172,25 +180,21 @@
 \begin{skills} {Language}
 \skill[Polish]{ Mother tongue }
 \skill[English]{ Fluent }
-%% \skill[Esperanto]{ Fluent}
-%% \skill[Dutch]{ Notions}
-%% \skill[German]{ Notions}
 \end{skills}
-\begin{skills}{Management}
-\skill[Museum]{in Amiens}
-\end{skills}
+
 \begin{skills}{Programming}
-\skill[FP]{more than 60, mainly in Adventure and Science Fiction genres}
-\skill[hmmm]{more than 180 in various genres}
+  \skill[FP]{Utilize functional programming concepts to deliver reliable, composable software.}
+  \skill[Languages]{Worked with multiple of technologies and programming languages.}
+  \skill[Automation]{Never do the same manual work twice.}
 \end{skills}
-% Argument for fields env. are title, cols count and max rate
-\begin{fields}{Literary genre}{3}{5}
-\field{Science-Fiction}{5}
-\field{Adventure}{5}
-\field{Essay}{3}
-\field{Suspense}{3}
-\field{Thriller}{2}
-\field{Romance}{0}
+
+\begin{fields}{Scoring}{3}{5}
+  \field{Scala}{5}
+  \field{Functional Programming}{4}
+  \field{Shapeless}{4}
+  \field{Cats}{4}
+  \field{build tools}{4}
+  \field{nix}{2}
 \end{fields}
 
 %\textit{I hereby give consent for my personal data included in my offer to be processed for the purposes of recruitment, in accordance with the Personal Data Protection Act dated 23.08.1997 (uniform text: Journal of Laws of the Republic of Poland 2002 No 101, item 926 with further amendments).}
