Probably final fixes.

--- a/src/kczulko-cv.tex
+++ b/src/kczulko-cv.tex
@@ -50,18 +50,18 @@
 \story{scala developer}
       {\href{https://www.jit.team}{Jit Team} (under contract to Nordea Poland)}
       {since 07.2019\\Gdynia, Poland}
-      {scala, cats, http4s,\\shapeless, tagless-final,\\bazel, nix, kafka,\\elasticsearch,\\microservices
+      {scala, cats, http4s,\\shapeless, tagless-final,\\fs2, bazel, nix, kafka,\\elasticsearch,\\microservices
       }
       {Development of HDFS metadata indexing hub (proprietary solution akin to \href{https://egeria.odpi.org}{egeria}).
-        Product is based on service oriented architecture build on the top of
+        Product I work on has service oriented architecture build on the top of
         Elasticsearch and allows datascientists to search for any data that exists
         within Nordea's datalake.
         Please find some of my achievements below:
         \begin{missions}
-        \item I've introduced (and teached internal workers) modern FP architecture across microservices
-        \item I've unified technology stack into more FP oriented one (better testability)
+        \item I've introduced and teached internal workers modern FP architecture
+        \item I've unified technology stack into more FP oriented one (for better testability)
         \item Implemented and refactored most of microservices
-        \item Planned, designed and delivered several feautures
+        \item Planned, designed and delivered several features
         \end{missions}
       }
 %----------------------------------------------------------------------------
@@ -69,11 +69,12 @@
       {\href{https://www.intel.com/content/www/us/en/jobs/locations/poland.html}{Intel Technology Poland}}
       {07.2018 - 06.2019\\Gdańsk, Poland}
       {compilers, shapeless,\\scala-macros, fs2, zio,\\monocle, scalaz,\\antlr4, sbt}
-      {I worked with presilicon group under Intel Network Division (before aquisition it was Fulcrum Microsystems from Caltech).
+      {I worked for pre-silicon group under Intel Network Division (before aquisition it was Fulcrum Microsystems from Caltech).
         Essentially, I was hired to develop scala simulation model for next generation ethernet switch.
-        Due to requirements change within our organisation, this activity was abandoned.
+        Due to the requirements change within our organisation, this activity was abandoned.
         Since our group lacked good, modern compiler support for presilicon memory design activities, we decided to focus on
-        \href{https://www.accellera.org/downloads/standards/systemrdl}{SystemRDL 1.0} (SRDL) compiler development. Here are some of my key achievements:
+        \href{https://www.accellera.org/downloads/standards/systemrdl}{SystemRDL 1.0} (SRDL) compiler development.
+        Here are some of my key achievements:
         \begin{missions}
         \item I've developed probably first fully compliant, built-in SRDL1.0 preprocessor
         \item Redefined SRDL1.0 grammar (official one had bugs)
@@ -83,11 +84,10 @@
 %----------------------------------------------------------------------------
 \story{senior java developer}
       {\href{https://diversecg.pl/}{DCG} (under contract to Nordea Capital Markets)}
-      %% {03.2018-06.2018\\Gdańsk, Poland}
       {March - June, 2018\\Gdańsk, Poland}
       {java, spark, docker\\java-testcontainers}
-      {I've joined a team responsible for Market Liquidity Credit Risk (MLQR) app development.
-        MLQR was internal, proprietary application responsible for calulating daily - executed as batch job - credit risk coefficient.
+      {I've joined the team responsible for Market Liquidity Credit Risk (MLQR) app development.
+        MLQR was internal, proprietary application responsible for calulating daily - executed as batch job - credit risk coefficient values.
         Please find below some of my duties \& achievements:
         \begin{missions}
         \item Developed local spark deployment of ETL job for test configuration
@@ -99,10 +99,11 @@
       {2017 - 2018\\Gdańsk, Poland}
       {scala, akka-streams,\\graphql, cassandra,\\kafka, play, mtl}
       {During almost all of my time spend at Scalac, I worked for Qvantel - a Finnish business solution systems provider for telco companies.
-        As a Scalac we developed for Qvantel several microservices, mostly responsible for ETL jobs (messages transformation and ingesting).
+        As a Scalac, we developed for Qvantel several microservices, mostly responsible for ETL jobs (messages transformation and ingesting).
         Our scallable apps were deployed on emerging markets like Bolivia, Equador or Honduras. For one of them we satisfied client's constraint
         to process \approx12k messages per second. More about this cooperation can be found
-        \href{http://media.licdn.com/embeds/media.html?src=https\%3A\%2F\%2Fissuu.com\%2Foutlookpublishing\%2Fdocs\%2Fqvantel\&amp;url=https\%3A\%2F\%2Fissuu.com\%2Foutlookpublishing\%2Fdocs\%2Fqvantel\&amp;type=text\%2Fhtml\&amp;schema=issuu}{>>here<<}.
+        \href{http://media.licdn.com/embeds/media.html?src=https\%3A\%2F\%2Fissuu.com\%2Foutlookpublishing\%2Fdocs\%2Fqvantel\&amp;url=https\%3A\%2F\%2Fissuu.com\%2Foutlookpublishing\%2Fdocs\%2Fqvantel\&amp;type=text\%2Fhtml\&amp;schema=issuu}{\emph{>>here<<}}. Next, my team was asked to develop proof-of-concept application
+        utilizing graphQL approach in order to get rid of plenty RESTful services and improve Qvantel's business.
       }
 %----------------------------------------------------------------------------
 \story{software engineer}
@@ -112,11 +113,11 @@
       {java ee, c\#, c++11,\\gradle, docker,\\nodejs, bash}
       {Initially I was hired as experienced validation engineer for newly formed \href{https://www.intel.com/intelRSD}{Rackscale Design (RSD)} team.
         My role was to develop high quality testing libraries and provide mentorship for other team members.
-        After some time I've joined development teams. Firstly it wrote some firmware code, especially to model LVM system.
-        Later I joined development team of
+        After some time I've joined development teams. Firstly, to help with firmware code, especially to model LVM system under firmware component.
+        Later, I joined development team of
         \href{https://www.intel.com/content/www/us/en/architecture-and-technology/rack-scale-design/pod-manager-user-guide-v2-1.html}{POD Manager} component,
-        where I spend most of my time at Intel. I've been developing there RESTful web service, responsible for assembly and system composition of Intel's RSD. 
-        Some of my work can still be found here: \emph{\href{https://github.com/intel/intelRSD}{https://github.com/intel/intelRSD}}
+        where I spend most of my time at Intel. I've been developing RESTful web service, responsible for assembly and system composition of Intel's RSD. 
+        Some of my work can still be found at github \emph{\href{https://github.com/intel/intelRSD}{intel/intelRSD}}.
         Below are some of my key achievements:
         \begin{missions}
         \item Developed most of testing code \& libraries (around 50\% of commits were mine)
@@ -146,16 +147,15 @@
         \begin{missions}
         \item Implemented python-based testing framework for CIM RAID interface
         \item Developed dozen of mdadm tests
-        \item Developed c\# library for storage discovery
+        \item Developed C\# library for storage discovery
         \end{missions}
       }
 %----------------------------------------------------------------------------
 \story{software engineer}{\href{https://micromade.pl}{Micromade}}
       {2010 - 2011\\Gdańsk, Poland}
       {c++, c, vcl}
-      {At Micromade I was responsible for new user interface of `bibinet` application.
-        It is a management software for their well known product for work time
-        tracking and access control.
+      {At Micromade I was responsible for implementing brand new user interface of `bibinet` application.
+        It is a management software for their well known product for work time tracking and access control.
       }
 %----------------------------------------------------------------------------
 \story{internship}{\href{https://voicelab.ai}{Voicelab}}
@@ -171,9 +171,7 @@
       {Faculty of Electronics, Telecommunications and Informatics:
         \begin{missions}
           \item Master thesis: \textit{Implementation of lattice adaptive filters on the CUDA platform}
-          \item \emph{Dean's disctinction} for
-            \href{https://projektgrupowy.eti.pg.gda.pl/editions/2/projects/496/posters/138}
-                 {\itshape Anti-collision system for industrial robots}
+          \item \href{https://projektgrupowy.eti.pg.gda.pl/editions/2/projects/496/posters/138}{\emph{Distinction of faculty dean for \itshape Anti-collision system for industrial robots}}
         \end{missions}
       }
 \section{Skills}
@@ -192,9 +190,9 @@
   \field{Scala}{5}
   \field{Functional Programming}{4}
   \field{Shapeless}{4}
-  \field{Cats}{4}
+  \field{Cats}{5}
   \field{build tools}{4}
-  \field{nix}{2}
+  \field{fs2}{4}
 \end{fields}
 
 %\textit{I hereby give consent for my personal data included in my offer to be processed for the purposes of recruitment, in accordance with the Personal Data Protection Act dated 23.08.1997 (uniform text: Journal of Laws of the Republic of Poland 2002 No 101, item 926 with further amendments).}
