--- a/src/kczulko-cv.tex
+++ b/src/kczulko-cv.tex
@@ -54,7 +54,7 @@
       }
       {Development of HDFS metadata indexing hub (proprietary solution akin to \href{https://egeria.odpi.org}{egeria}).
         Product I work on has service oriented architecture build on the top of
-        Elasticsearch and allows datascientists to search for any data that exists
+        Elasticsearch. It allows datascientists to search for any data that exists
         within Nordea's datalake.
         Please find some of my achievements below:
         \begin{missions}
@@ -97,9 +97,9 @@
 %----------------------------------------------------------------------------
 \story{scala developer}{\href{https://www.scalac.io}{Scalac}}
       {2017 - 2018\\Gdańsk, Poland}
-      {scala, akka-streams,\\graphql, cassandra,\\kafka, play, mtl}
+      {scala, akka-streams,\\graphql, cassandra,\\kafka, play, mtl,\\marathon}
       {During almost all of my time spend at Scalac, I worked for Qvantel - a Finnish business solution systems provider for telco companies.
-        As a Scalac, we developed for Qvantel several microservices, mostly responsible for ETL jobs (messages transformation and ingesting).
+        As a Scalac, we developed for Qvantel several microservices, mostly responsible for ETL jobs (messages transformation and ingestion).
         Our scallable apps were deployed on emerging markets like Bolivia, Equador or Honduras. For one of them we satisfied client's constraint
         to process \approx12k messages per second. More about this cooperation can be found
         \href{http://media.licdn.com/embeds/media.html?src=https\%3A\%2F\%2Fissuu.com\%2Foutlookpublishing\%2Fdocs\%2Fqvantel\&amp;url=https\%3A\%2F\%2Fissuu.com\%2Foutlookpublishing\%2Fdocs\%2Fqvantel\&amp;type=text\%2Fhtml\&amp;schema=issuu}{\emph{>>here<<}}. Next, my team was asked to develop proof-of-concept application
@@ -120,9 +120,9 @@
         Some of my work can still be found at github \emph{\href{https://github.com/intel/intelRSD}{intel/intelRSD}}.
         Below are some of my key achievements:
         \begin{missions}
-        \item Developed most of testing code \& libraries (around 50\% of commits were mine)
+        \item I've developed most of testing code \& libraries (\textasciitilde50\% of commits were mine)
         \item Implemented PODManager composition logic
-        \item Implemented network discovery through DHCP
+        \item Implemented services discovery over network through DHCP
         \end{missions}
       }      
 %----------------------------------------------------------------------------
@@ -132,7 +132,7 @@
       {I've joined Misys to support Kondor+ product development.
         Apart from that, I've done some work around other products related to Kondor+
         like MarkitWire adapter, which gave customers ability to use Kondor+ together
-        with Markit stack.
+        with Markit stack. I have also fixed several performance issues within Kondor+ product.
       }
 %----------------------------------------------------------------------------
 \story{software engineer}
@@ -142,7 +142,7 @@
       {I was hired to external team working for Intel Technology Poland. The team
         took over responsibility for \href{https://en.wikipedia.org/wiki/Mdadm}{\emph{mdadm}}
         validation, where Intel made support for their metadata. Later on I was
-        responsible for Intel's `iscsi` driver validation. Please find below some
+        responsible for Intel's iSCSI driver validation. Please find below some
         of my key achievements:
         \begin{missions}
         \item Implemented python-based testing framework for CIM RAID interface
