--- a/src/kczulko-cv.tex
+++ b/src/kczulko-cv.tex
@@ -69,10 +69,10 @@
       {\href{https://www.intel.com/content/www/us/en/jobs/locations/poland.html}{Intel Technology Poland}}
       {07.2018 - 06.2019\\Gdańsk, Poland}
       {compilers, shapeless,\\scala-macros, fs2, zio,\\monocle, scalaz,\\antlr4, sbt}
-      {I worked for pre-silicon group under Intel Network Division (before aquisition it was Fulcrum Microsystems from Caltech).
-        Essentially, I was hired to develop scala simulation model for next generation ethernet switch.
-        Due to the requirements change within our organisation, this activity was abandoned.
-        Since our group lacked good, modern compiler support for presilicon memory design activities, we decided to focus on
+      {Work for pre-silicon group under Intel Network Division (before aquisition it was Fulcrum Microsystems from Caltech).
+        Essentially, company hired me to develop scala simulation model for next generation ethernet switch.
+        Due to the requirements change within organisation, this activity was abandoned.
+        Since Network Divition group lacked good, modern compiler support for presilicon memory design activities, we decided to focus on
         \href{https://www.accellera.org/downloads/standards/systemrdl}{SystemRDL 1.0} (SRDL) compiler development.
         Here are some of my key achievements:
         \begin{missions}
@@ -86,8 +86,8 @@
       {\href{https://diversecg.pl/}{DCG} (under contract to Nordea Capital Markets)}
       {March - June, 2018\\Gdańsk, Poland}
       {java, spark, docker\\java-testcontainers}
-      {I've joined the team responsible for Market Liquidity Credit Risk (MLQR) app development.
-        MLQR was internal, proprietary application responsible for calulating daily - executed as batch job - credit risk coefficient values.
+      {I have joined the team responsible for Market Liquidity Credit Risk (MLQR) app development.
+        MLQR was internal, proprietary application, which main activity was calulating daily - executed as batch job - credit risk coefficient values.
         Please find below some of my duties \& achievements:
         \begin{missions}
         \item Developed local spark deployment of ETL job for test configuration
@@ -98,11 +98,11 @@
 \story{scala developer}{\href{https://www.scalac.io}{Scalac}}
       {2017 - 2018\\Gdańsk, Poland}
       {scala, akka-streams,\\graphql, cassandra,\\kafka, play, mtl,\\marathon}
-      {During almost all of my time spend at Scalac, I worked for Qvantel - a Finnish business solution systems provider for telco companies.
+      {For the vast majority of time spend at Scalac, my contribution was related with Qvantel - a Finnish business solution systems provider for telco companies.
         As a Scalac, we developed for Qvantel several microservices, mostly responsible for ETL jobs (messages transformation and ingestion).
-        Our scallable apps were deployed on emerging markets like Bolivia, Equador or Honduras. For one of them we satisfied client's constraint
+        Scallable apps developed Qvantel were deployed on emerging markets like Bolivia, Equador or Honduras. For one of them we satisfied client's constraint
         to process \approx12k messages per second. More about this cooperation can be found
-        \href{http://media.licdn.com/embeds/media.html?src=https\%3A\%2F\%2Fissuu.com\%2Foutlookpublishing\%2Fdocs\%2Fqvantel\&amp;url=https\%3A\%2F\%2Fissuu.com\%2Foutlookpublishing\%2Fdocs\%2Fqvantel\&amp;type=text\%2Fhtml\&amp;schema=issuu}{\emph{>>here<<}}. Next, my team was asked to develop proof-of-concept application
+        \href{https://issuu.com/outlookpublishing/docs/qvantel}{\emph{>>here<<}}. Next, the team was asked to develop proof-of-concept application
         utilizing graphQL approach in order to get rid of plenty RESTful services and improve Qvantel's business.
       }
 %----------------------------------------------------------------------------
@@ -111,8 +111,8 @@
         {Intel Technology Poland}}
       {2014 - 2017\\Gdańsk, Poland}
       {java ee, c\#, c++11,\\gradle, docker,\\nodejs, bash}
-      {Initially I was hired as experienced validation engineer for newly formed \href{https://www.intel.com/intelRSD}{Rackscale Design (RSD)} team.
-        My role was to develop high quality testing libraries and provide mentorship for other team members.
+      {The company was looking for experienced validation engineer for newly formed \href{https://www.intel.com/intelRSD}{Rackscale Design (RSD)} team.
+        My duties were to develop high quality testing libraries and provide mentorship for other team members.
         After some time I've joined development teams. Firstly, to help with firmware code, especially to model LVM system under firmware component.
         Later, I joined development team of
         \href{https://www.intel.com/content/www/us/en/architecture-and-technology/rack-scale-design/pod-manager-user-guide-v2-1.html}{POD Manager} component,
