Add Publications / public speeches section.

--- a/src/kczulko-cv.tex
+++ b/src/kczulko-cv.tex
@@ -85,7 +85,7 @@
 \story{senior java developer}
       {\href{https://diversecg.pl/}{DCG} (under contract to Nordea Capital Markets)}
       {March - June, 2018\\Gdańsk, Poland}
-      {java, spark, docker\\java-testcontainers}
+      {java, spark, docker,\\java-testcontainers}
       {I have joined the team responsible for Market Liquidity Credit Risk (MLQR) app development.
         MLQR was internal, proprietary application, which main activity was calulating daily - executed as batch job - credit risk coefficient values.
         Please find below some of my duties \& achievements:
@@ -101,9 +101,8 @@
       {For the vast majority of time spend at Scalac, my contribution was related with Qvantel - a Finnish business solution systems provider for telco companies.
         As a Scalac, we developed for Qvantel several microservices, mostly responsible for ETL jobs (messages transformation and ingestion).
         Scallable apps developed Qvantel were deployed on emerging markets like Bolivia, Equador or Honduras. For one of them we satisfied client's constraint
-        to process \approx12k messages per second. More about this cooperation can be found
-        \href{https://issuu.com/outlookpublishing/docs/qvantel}{\emph{>>here<<}}. Next, the team was asked to develop proof-of-concept application
-        utilizing graphQL approach in order to get rid of plenty RESTful services and improve Qvantel's business.
+        to process \approx12k messages per second. Next, the team was asked to develop proof-of-concept application utilizing graphQL approach in order to get
+        rid of plenty RESTful services and improve Qvantel's business. Please find more about this cooperation under ,,Publications / public speeches'' section.
       }
 %----------------------------------------------------------------------------
 \story{software engineer}
@@ -174,6 +173,24 @@
           \item \href{https://projektgrupowy.eti.pg.gda.pl/editions/2/projects/496/posters/138}{\emph{Distinction of faculty dean for \itshape Anti-collision system for industrial robots}}
         \end{missions}
       }
+
+      \section{Publications / Public speeches}
+      \label{Publications}
+\story{Functional Tricity}{Meetup}{2017\\Gdańsk, Poland}
+      {scala, shapeless,\\typeclasses,\\scala compiler}
+      {Yet another real-life (live) shapeless example
+        \begin{missions}
+          \item \href{https://www.youtube.com/watch?v=cek9Hio7aZg}{https://www.youtube.com/watch?v=cek9Hio7aZg}
+        \end{missions}
+      }
+\story{EMEoutlook}{Publication}{2017\\Helsinki, Finland}
+      {scala, enterprise,\\functional programming}
+      {Scale fast with Scalac
+        \begin{missions}
+          \item \href{https://issuu.com/outlookpublishing/docs/qvantel}{https://issuu.com/outlookpublishing/docs/qvantel}
+        \end{missions}
+      }
+
 \section{Skills}
 \begin{skills} {Language}
 \skill[Polish]{ Mother tongue }
