Emph Publications / public speeches section.

--- a/src/kczulko-cv.tex
+++ b/src/kczulko-cv.tex
@@ -102,7 +102,7 @@
         As a Scalac, we developed for Qvantel several microservices, mostly responsible for ETL jobs (messages transformation and ingestion).
         Scallable apps developed Qvantel were deployed on emerging markets like Bolivia, Equador or Honduras. For one of them we satisfied client's constraint
         to process \approx12k messages per second. Next, the team was asked to develop proof-of-concept application utilizing graphQL approach in order to get
-        rid of plenty RESTful services and improve Qvantel's business. Please find more about this cooperation under ,,Publications / public speeches'' section.
+        rid of plenty RESTful services and improve Qvantel's business. Please find more about this cooperation under \emph{Publications / public speeches} section.
       }
 %----------------------------------------------------------------------------
 \story{software engineer}
