--- a/src/kczulko-cv.tex
+++ b/src/kczulko-cv.tex
@@ -97,7 +97,7 @@
 %----------------------------------------------------------------------------
 \story{scala developer}{\href{https://www.scalac.io}{Scalac}}
       {2017 - 2018\\Gdańsk, Poland}
-      {scala, akka-streams,\\graphql, cassandra,\\kafka, play, mtl,\\marathon}
+      {scala, akka-streams,\\graphql, cassandra,\\kafka, play, mtl,\\flink, marathon}
       {For the vast majority of time spend at Scalac, my contribution was related with Qvantel - a Finnish business solution systems provider for telco companies.
         As a Scalac, we developed for Qvantel several microservices, mostly responsible for ETL jobs (messages transformation and ingestion).
         Scallable apps developed Qvantel were deployed on emerging markets like Bolivia, Equador or Honduras. For one of them we satisfied client's constraint
