Add postgres tech for last job.

--- a/src/kczulko-cv.tex
+++ b/src/kczulko-cv.tex
@@ -50,7 +50,7 @@
 \story{scala developer}
       {\href{https://www.jit.team}{Jit Team} (under contract to Nordea Poland)}
       {since 07.2019\\Gdynia, Poland}
-      {scala, cats, http4s,\\shapeless, tagless-final,\\fs2, bazel, nix, kafka,\\elasticsearch,\\microservices
+      {scala, cats, http4s,\\shapeless, tagless-final,\\fs2, bazel, nix, kafka,\\elasticsearch,\\microservices,\\postgres
       }
       {Development of HDFS metadata indexing hub (proprietary solution akin to \href{https://egeria.odpi.org}{egeria}).
         Product I work on has service oriented architecture build on the top of
@@ -59,7 +59,7 @@
         Please find some of my achievements below:
         \begin{missions}
         \item I've introduced and teached internal workers modern FP architecture
-        \item I've unified technology stack into more FP oriented one (for better testability)
+        \item I've unified technology stack into more FP oriented one
         \item Implemented and refactored most of microservices
         \item Planned, designed and delivered several features
         \end{missions}
