--- a/src/kczulko-cv.tex
+++ b/src/kczulko-cv.tex
@@ -72,7 +72,7 @@
       {Work for pre-silicon group under Intel Network Division (before aquisition it was Fulcrum Microsystems from Caltech).
         Essentially, company hired me to develop scala simulation model for next generation ethernet switch.
         Due to the requirements change within organisation, this activity was abandoned.
-        Since Network Divition group lacked good, modern compiler support for presilicon memory design activities, we decided to focus on
+        Since Network Division group lacked good, modern compiler support for presilicon memory design activities, we decided to focus on
         \href{https://www.accellera.org/downloads/standards/systemrdl}{SystemRDL 1.0} (SRDL) compiler development.
         Here are some of my key achievements:
         \begin{missions}
